--- a/SDKService.csproj
+++ b/SDKService.csproj
@@ -65,6 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Empresa.cs" />
+    <Compile Include="Models\Request.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Models\TCPServer.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
