--- a/SDKService.csproj
+++ b/SDKService.csproj
@@ -64,17 +64,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Empresa.cs" />
+    <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Request.cs" />
     <Compile Include="Models\Response.cs" />
-    <Compile Include="Models\TCPServer.cs" />
+    <Compile Include="TCPServer.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="SDK.cs" />
+    <Compile Include="Models\SDK.cs" />
     <Compile Include="Service1.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="config.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
