first working version

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "RutaBinarios": "C:\\Program Files (x86)\\Compac\\COMERCIAL",
   "NombrePAQ": "CONTPAQ I COMERCIAL",
   "RutaEmpresa": "C:\\Compac\\Empresas\\adPATRONATOPROHOSPIT",
-  "User": "SUPERVISOR",
-  "Password": ""
+  "User": "KEVIN",
+  "Password": "index"
 }
